[package]
name = "rpush"
version = "0.0.5"
edition = "2021"
authors = ["Liyan 18525589998@163.com"]
description = "push files to server by rust."
license = "MIT"
documentation = "https://docs.rs/rpush"
homepage = "https://www.surcode.cn/docs/apps/rpush"
repository = "https://github.com/hi-liyan/rpush/"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# command line arguments parse
clap = { version = "3.2.21", features = ["derive", "cargo"] }
# serializing and deserializing
serde = { version = "1.0.144", features = ["derive"] }
# controlling print colors and formatting
nu-ansi-term = { version = "0.46.0" }
# configuration management
confy = { version = "0.5.0", features = ["yaml_conf"], default-features = false }
# compression and decompression
flate2 = { version = "1.0.24" }
tar = { version = "0.4.38" }
# ssh
ssh-rs = { version = "0.2.0" }
# dirs
dirs = { version = "4.0" }
# progress
indicatif = { version = "0.17.1" }


