[package]
name = "rpush"
version = "0.0.6"
edition = "2021"
authors = ["Liyan 18525589998@163.com"]
description = "push files to server by rust."
license = "MIT"
documentation = "https://docs.rs/rpush"
homepage = "https://www.surcode.cn/docs/apps/rpush"
repository = "https://github.com/hi-liyan/rpush/"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# command line arguments parse
clap = { version = "3.2.21", features = ["derive", "cargo"] }
# serializing and deserializing
serde = { version = "1.0.144", features = ["derive"] }
# controlling print colors and formatting
nu-ansi-term = "0.46.0"
# configuration management
confy = { version = "0.5.0", features = ["yaml_conf"], default-features = false }
# compression and decompression
flate2 = "1.0.24"

tar = "0.4.38"
# ssh
ssh-rs = "0.2.0"
# dirs
dirs = "4.0"
# progress
indicatif = "0.17.1"

mac_address = "1.1.4"

rust-crypto = "0.2.36"

base64 = "0.13.1"

rpassword = "7.1.0"



